feat: add data list to statistic views
